# UniCAP

./: CMakeLists.txt  INSTALL.txt  README.md  _config.yml  feed.xml  index.html  install.md  params.json
_layouts/: default.html  index.html  page.html  post.html
_posts/: 2015-11-07- document.markdown  2015-11-07-example.markdown  2015-11-07-getting started.markdown  2015-11-07-index.markdown  2015-11-07-install.markdown  2015-11-07-welcome-to-jekyll.markdown
_site/: feed.xml  index.html
_site/img/: timed_data_flow.graffle
_site/jekyll/update/2015/11/07/: welcome-to-jekyll.html
_site/unicap/2015/11/07/: document.html  example.html  getting-started.html  index.html  install.html  welcome-to-jekyll.html
about/: index.html
app/: CMakeLists.txt  job_tracker.cpp  user_cpu_functions.h
css/: main.css  main.scss
etc/: unicap.yaml
img/: timed_data_flow.graffle  unicap_sys.graffle
src/common/: CMakeLists.txt  column_family.cpp  column_family.h  intermediate_result.h  node_info.cpp  node_info.h  storage.cpp  storage.h  storage_info.cpp  storage_info.h  table.cpp  table.h  unicap_client.h
src/computing/: CMakeLists.txt  cpu_functions.cpp  cpu_functions.h
src/job_tracker/: CMakeLists.txt  DAG.cpp  DAG.h  job_tracker_handler.cpp  job_tracker_handler.h  job_tracker_server.cpp  job_tracker_server.h  load_hdfs_file.cpp  load_img.cpp  load_local_file.cpp  scheduler.h  stage.cpp  stage.h
src/storage/: CMakeLists.txt  dense_matrix.cpp  dense_matrix.h  hdfs_key_value.cpp  hdfs_key_value.h  image_key_value.cpp  image_key_value.h  in_memory_key_value.cpp  in_memory_key_value.h  kv_base.h  lsm_key_value.cpp  lsm_key_value.h  sparse_matrix.cpp  sparse_matrix.h  storage_systems.h
src/task_tracker/: CMakeLists.txt  cpu_networks.h  cpu_worker.cpp  cpu_worker.h  task_tracker.cpp  task_tracker_handler.cpp  task_tracker_handler.h  task_tracker_server.cpp  task_tracker_server.h
src/thrift/: Unicap.thrift
src/thrift/gen-cpp/: JobTracker.h  JobTracker_server.skeleton.cpp  TaskTracker.h  TaskTracker_server.skeleton.cpp  Unicap_constants.h  Unicap_types.h
src/tools/include/boost/: threadpool.hpp
src/tools/include/boost/threadpool/: future.hpp  pool.hpp  pool_adaptors.hpp  scheduling_policies.hpp  shutdown_policies.hpp  size_policies.hpp  task_adaptors.hpp
src/tools/include/boost/threadpool/detail/: future.hpp  locking_ptr.hpp  pool_core.hpp  scope_guard.hpp  worker_thread.hpp
src/tools/lib/: lib.txt
unicap/: _config.yml  about.md
unicap/_layouts/: default.html  page.html  post.html
